--- a/themes/colearnr.css
+++ b/themes/colearnr.css
@@ -1,145 +1,79 @@
-/* Tomorrow Night Eighties Theme */
-/* Original theme - https://github.com/chriskempson/tomorrow-theme */
-.prettyprint {
-  background: #2c2c2c;
-  font-family: 'Source Code Pro', Consolas, 'Courier New', Menlo, 'Bitstream Vera Sans Mono', 'DejaVu Sans Mono', Monaco, Consolas, monospace;
+/* ========================
+//Based on: https://github.com/RaphaelDDL/google-prettify-monokai-theme/
+//======================== */
+
+pre .str, code .str { color: #e6db5a; } /* string */
+pre .kwd, code .kwd { color: #66d9ef; } /* keyword */
+pre .com, code .com { color: #75715e; font-style: italic; } /* comment */
+pre .typ, code .typ { color: #66d9ef; } /* type */
+pre .lit, code .lit { color: #ae81ff; } /* literal */
+pre .pun, code .pun { color: #fff; } /* punctuation */
+pre .pln, code .pln { color: #fff; } /* plaintext */
+pre .tag, code .tag { color: #f92672; } /* html/xml tag */
+pre .atn, code .atn { color: #a6e22a; } /* html/xml attribute name */
+pre .atv, code .atv { color: #e6db74; } /* html/xml attribute value */
+pre .dec, code .dec { color: #ae81ff; } /* decimal */
+
+pre.prettyprint, code.prettyprint {
+  background-color: #272822;
+  -moz-border-radius: 8px;
+  -webkit-border-radius: 8px;
+  -o-border-radius: 8px;
+  -ms-border-radius: 8px;
+  -khtml-border-radius: 8px;
+  border-radius: 8px;
+}
+
+pre.prettyprint {
+  width: 100%;
+  margin: 1em auto;
+  padding: 1em;
+  white-space: pre-wrap;
   font-size: 14px;
   line-height: 1.5;
-  border: 1px solid #ccc;
-  padding: 10px;
+  font-family: 'Source Code Pro', Consolas, 'Courier New', Menlo, 'Bitstream Vera Sans Mono', 'DejaVu Sans Mono';
 }
 
-.pln {
-  color: #FFFFFF;
+pre.prettyprinted {
+  box-shadow:inset 0 0 1px 2px #3c3d39, 0 0 15px rgba(0,0,0,0.5);
+  border:1px solid #0b0c0a;
 }
 
-@media screen {
-  .str {
-    color: #486D98;
-  }
 
-  .kwd {
-    color: #cc99cc;
-  }
-
-  .com {
-    color: #999999;
-  }
-
-  .typ {
-    color: #6699cc;
-  }
-
-  .lit {
-    color: #f99157;
-  }
-
-  .pun {
-    color: #cccccc;
-  }
-
-  .opn {
-    color: #cccccc;
-  }
-
-  .clo {
-    color: #cccccc;
-  }
-
-  .tag {
-    color: #f2777a;
-  }
-
-  .atn {
-    color: #f99157;
-  }
-
-  .atv {
-    color: #486D98;
-  }
-
-  .dec {
-    color: #f99157;
-  }
-
-  .var {
-    color: #f2777a;
-  }
-
-  .fun {
-    color: #6699cc;
-  }
-}
-@media print, projection {
-  .pln {
-    color: #000000;
-  }
-  .str {
-    color: #006600;
-  }
-
-  .kwd {
-    color: #006;
-    font-weight: bold;
-  }
-
-  .com {
-    color: #600;
-    font-style: italic;
-  }
-
-  .typ {
-    color: #404;
-    font-weight: bold;
-  }
-
-  .lit {
-    color: #004444;
-  }
-
-  .pun, .opn, .clo {
-    color: #444400;
-  }
-
-  .tag {
-    color: #006;
-    font-weight: bold;
-  }
-
-  .atn {
-    color: #440044;
-  }
-
-  .atv {
-    color: #006600;
-  }
-}
-/* Specify class=linenums on a pre to get line numbering */
+/* ------------------------
+//Section: class 'linenums' for line numbering
+//------------------------ */
 ol.linenums {
   margin-top: 0;
   margin-bottom: 0;
-  color: #cccccc;
-}
+  color: #75715e;
+  list-style: decimal inside !important;
+} /* IE indents via margin-left */
 
-/* IE indents via margin-left */
-li.L0,
-li.L1,
-li.L2,
-li.L3,
-li.L4,
-li.L5,
-li.L6,
-li.L7,
-li.L8,
-li.L9 {
-  /* */
-}
 
-/* Alternate shading for lines */
-li.L1,
-li.L3,
-li.L5,
-li.L7,
-li.L9 {
-  /* */
+/* =============================================
+//Section: Print Styles (partially from Sunburn Theme)
+//================================================ */
+@media print {
+  pre.prettyprinted, pre.prettyprint, code.prettyprint {
+    background-color:#fff;
+    color:#000;
+    -moz-border-radius:0;
+    -webkit-border-radius:0;
+    -o-border-radius:0;
+    -ms-border-radius:0;
+    -khtml-border-radius:0;
+    border-radius:0;
+  }
+
+  pre .str, code .str { color: #060; }
+  pre .kwd, code .kwd { color: #006; font-weight: bold; }
+  pre .com, code .com { color: #600; font-style: italic; }
+  pre .typ, code .typ { color: #404; font-weight: bold; }
+  pre .lit, code .lit { color: #044; }
+  pre .pun, code .pun { color: #440; }
+  pre .pln, code .pln { color: #000; }
+  pre .tag, code .tag { color: #006; font-weight: bold; }
+  pre .atn, code .atn { color: #404; }
+  pre .atv, code .atv { color: #060; }
 }
